@@ -5,6 +5,8 @@ documents those changes that are of interest to users and administrators.
 ==========================
  -- sbatch - handle --uid/--gid in #SBATCH directives properly.
  -- Fix HDF5 type version build error.
+ -- PMIx - fix potential buffer overflows from use of unpackmem().
+    CVE-2020-27745.
 
 * Changes in Slurm 19.05.7
 ==========================
